# gazebo_odom_plugin

./: README.md  test.launch  world.sdf
robot/: model.sdf
robot/plugins/: CMakeLists.txt  odom.cpp
